--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-virtual-scroll.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-virtual-scroll.scss
@@ -1,4 +1,8 @@
 .#{$prefix}--ci-doc-virtual-scroll {
+  .ReactVirtualized__Grid {
+    padding: $spacing-3xl;
+  }
+
   .ReactVirtualized__Grid__innerScrollContainer {
     margin: 0 $spacing-md $layout-xl;
   }
