--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-content.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-content.scss
@@ -1,6 +1,10 @@
 .#{$prefix}--ci-doc-content {
   height: 100%;
 
+  &.skeleton {
+    padding: $spacing-3xl;
+  }
+
   .ReactVirtualized__Grid__innerScrollContainer {
     margin: 0 $spacing-md $layout-xl;
   }
