--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-filter.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-filter.scss
@@ -1,29 +1,84 @@
 @import '~carbon-components/scss/components/skeleton/skeleton';
+@import '~carbon-components/scss/components/checkbox/checkbox';
+@import '~carbon-components/scss/components/multi-select/multi-select';
+@import '~carbon-components/scss/components/radio-button/radio-button';
 
 .#{$prefix}--ci-doc-filter {
+  &.skeletons {
+    padding: $spacing-md;
+  }
+
+  * {
+    font-size: 0.75rem;
+  }
+
+  .filterTitle {
+    font-weight: normal;
+    line-height: 1.3;
+    padding: $spacing-lg $spacing-lg 0;
+  }
+
   .resetButton {
-    padding: $spacing-sm;
+    padding: $spacing-2xs;
+    min-height: 0;
+    margin-top: $spacing-2xs;
+    margin-left: $spacing-lg;
     outline: none;
     border: none;
     background-color: initial;
+    color: $interactive-01;
+
     &:focus {
       outline: 1px solid;
+    }
+
+    &:hover,
+    &:focus {
+      color: $interactive-01; // prevent default Carbon gray color
+    }
+
+    &[disabled] {
+      opacity: 0.3;
+      fill-opacity: 0.3;
+      cursor: not-allowed;
+    }
+  }
+
+  .group {
+    padding: $spacing-sm $spacing-lg;
+
+    &:not(:first-child) {
+      border-top: 1px solid $ui-03;
     }
   }
 
   .group-title {
-    font-size: 1rem;
-    font-weight: 600;
-    line-height: 1.375rem;
+    font-weight: bold;
+    color: $text-02;
+    line-height: 1rem;
+    margin-bottom: $spacing-2xs;
   }
 
-  .label {
-    display: inline;
-    padding-bottom: 0;
+  .bx--form-item.bx--checkbox-wrapper {
+    margin: 0;
+  }
+
+  .bx--radio-button-wrapper {
+    margin: $spacing-2xs 0;
+    justify-content: left;
+    align-items: flex-start;
+  }
+
+  .bx--radio-button__label {
+    justify-content: left;
+  }
+
+  .bx--checkbox-label-text {
+    font-size: 0.875rem;
   }
 
   .input[disabled] + .label {
-    color: $gray-30;
+    color: $disabled-02;
   }
 
   .count {
