fix: add error boundaries around top-level components (#334)
* fix: add error boundaries impl and usage

* fix: update styling for error msg

* fix: re-render wrapped component on prop changes

* fix: build error

--- a/packages/discovery-styles/scss/components/document-preview/_document-preview.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview.scss
@@ -7,7 +7,7 @@
   height: 100%;
 }
 
-.#{$prefix}--preview__skeleton {
+.#{$prefix}--document-preview__skeleton {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -18,12 +18,12 @@
   background-color: white;
 }
 
-.#{$prefix}--preview__document {
+.#{$prefix}--document-preview__document {
   position: relative;
   overflow: scroll;
 }
 
-.#{$prefix}--preview__document > * {
+.#{$prefix}--document-preview__document > * {
   width: 100%;
 }
 
@@ -39,4 +39,9 @@
 .#{$prefix}--document-preview__highlight {
   fill: yellow;
   fill-opacity: 0.25;
+}
+
+.#{$prefix}--document-preview__error {
+  text-align: center;
+  margin: $spacing-2xl;
 }
