bug: Pagination missing result count (#344)
* Update itemRangeText and styles

* Add test for itemRangeText

--- a/packages/discovery-styles/scss/components/results-pagination/_results-pagination.scss
+++ b/packages/discovery-styles/scss/components/results-pagination/_results-pagination.scss
@@ -1,1 +1,10 @@
 @import '~carbon-components/scss/components/pagination/pagination';
+
+.#{$prefix}--pagination__left {
+  padding: 0;
+
+  label,
+  .#{$prefix}--select {
+    display: none;
+  }
+}
