fix: Add prop for show/hide pageSizesSelector on pagination component (#360)
* Add prop for show/hide itemsPerPagePicker on pagination component

* Make prop optional

* Add to storybook for pagination too

* Move default props for consistency with other components

* Improve consistency of naming; change showPageSizeSelector to default true

--- a/packages/discovery-styles/scss/components/results-pagination/_results-pagination.scss
+++ b/packages/discovery-styles/scss/components/results-pagination/_results-pagination.scss
@@ -1,10 +1,12 @@
 @import '~carbon-components/scss/components/pagination/pagination';
 
-.#{$prefix}--pagination__left {
-  padding: 0;
+.#{$prefix}--pagination__page-size-selector--hidden {
+  .#{$prefix}--pagination__left {
+    padding: 0;
 
-  label,
-  .#{$prefix}--select {
-    display: none;
+    label,
+    .#{$prefix}--select {
+      display: none;
+    }
   }
 }
