Spelling suggestion show (#363)
* fix: show spelling suggestions when 0 results

* fix tests

* remove unnecessary react changes

* address comments

--- a/packages/discovery-styles/scss/components/search-results/_search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/_search-results.scss
@@ -11,7 +11,8 @@ $result-table-fade-offset: calc(#{$result-element-max-height} - #{$result-table-
   align-items: center;
 }
 
-.#{$prefix}--search-result {
+.#{$prefix}--search-result,
+.#{$prefix}--search-results__list--empty {
   @include layer('overlay');
   background-color: $result-background;
   padding: $spacing-05;
