feat: color theme, update CIDocument/DocPrev highlight colors (#368)
* feat: color theme component for use in JS

* feat: use theme component in CIDocument

* feat: update DocPrev highlight to match CIDocument

* fix: rename to `_vars.scss` and directly import

* fix: use carbon-approved color for highlight

--- a/packages/discovery-styles/scss/components/document-preview/_document-preview.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview.scss
@@ -1,3 +1,4 @@
+@import '../../vars';
 @import '~carbon-components/scss/components/skeleton/skeleton';
 
 .#{$prefix}--document-preview {
@@ -37,8 +38,8 @@
 }
 
 .#{$prefix}--document-preview__highlight {
-  fill: yellow;
-  fill-opacity: 0.25;
+  fill: $disco-highlight-background-with-opacity;
+  fill-opacity: $disco-highlight-background-opacity;
 }
 
 .#{$prefix}--document-preview__error {
