--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-toolbar.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-toolbar.scss
@@ -1,6 +1,4 @@
 .#{$prefix}--ci-doc-toolbar {
-  height: 100%;
-
   .text {
     display: inline-block;
     min-width: 70px; // To prevent shifting of buttons when number change
@@ -10,6 +8,7 @@
 
   .button {
     padding: 0;
+    margin: 0 $spacing-md 0 $spacing-md;
     height: 100%;
 
     .#{$prefix}--btn__icon {
