feat: show loading skeleton for search results (#372)
* feat: show loading skeleton for search results

* refactor css class names

* styling fixes

* fix test

* constantize skeleton loading count

* address comments

--- a/packages/discovery-styles/scss/components/search-results/_search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/_search-results.scss
@@ -11,8 +11,19 @@ $result-table-fade-offset: calc(#{$result-element-max-height} - #{$result-table-
   align-items: center;
 }
 
-.#{$prefix}--search-result,
-.#{$prefix}--search-results__list--empty {
+.#{$prefix}--search-result--loading {
+  padding: $spacing-lg;
+
+  .#{$prefix}--skeleton__text {
+    height: $spacing-sm;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.#{$prefix}--search-result {
   @include layer('overlay');
   background-color: $result-background;
   padding: $spacing-05;
