--- a/packages/discovery-styles/scss/components/search-input/_search-input.scss
+++ b/packages/discovery-styles/scss/components/search-input/_search-input.scss
@@ -2,15 +2,24 @@
 @import '~carbon-components/scss/components/search/search';
 @import '~carbon-components/scss/components/list-box/list-box';
 
+.#{$prefix}--search-input--discovery {
+  padding: 0;
+  position: relative;
+}
+
 .#{$prefix}--search-autocompletion {
   @include layer('overlay');
-  padding: 0 $spacing-md;
+  left: 0;
+  position: absolute;
+  right: 0;
+  z-index: z('overlay');
 }
 
 .#{$prefix}--search-autocompletion__wrapper {
   @include type-style('body-short-01');
   color: $gray-70;
   border-bottom-color: $ui-03;
+  width: 100%;
 
   &:last-of-type {
     border-bottom: none;
@@ -18,8 +27,9 @@
 }
 
 .#{$prefix}--search-autocompletion__item {
-  display: flex;
   align-items: center;
+  display: flex;
+  padding: 0 $spacing-md;
 }
 
 .#{$prefix}--search-autocompletion__term {
