--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -6,6 +6,7 @@ $css--use-layer: true !default;
 @import '~carbon-components/scss/globals/scss/_typography.scss';
 @import '~carbon-components/scss/globals/scss/_colors.scss';
 @import '~carbon-components/scss/globals/scss/_layer.scss';
+@import '~carbon-components/scss/globals/scss/_layout.scss';
 
 // Component styles
 @import 'components/search-input/search-input';
