fix: remove tilde from scss imports

--- a/examples/discovery-search-app/src/index.scss
+++ b/examples/discovery-search-app/src/index.scss
@@ -4,4 +4,4 @@ body {
   font-family: sans-serif;
 }
 
-@import '~@ibm-watson/discovery-styles/scss/index.scss';
+@import '@ibm-watson/discovery-styles/scss/index.scss';
