--- a/packages/discovery-styles/scss/components/search-results/_search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/_search-results.scss
@@ -1,5 +1,5 @@
-@import '~carbon-components/scss/components/toggle/toggle';
-@import '~carbon-components/scss/components/button/button';
+@import 'carbon-components/scss/components/toggle/toggle';
+@import 'carbon-components/scss/components/button/button';
 
 $result-background: white;
 $result-element-max-height: 100px;
