--- a/packages/discovery-styles/scss/components/results-pagination/_results-pagination.scss
+++ b/packages/discovery-styles/scss/components/results-pagination/_results-pagination.scss
@@ -1,4 +1,4 @@
-@import '~carbon-components/scss/components/pagination/pagination';
+@import 'carbon-components/scss/components/pagination/pagination';
 
 .#{$prefix}--pagination__page-size-selector--hidden {
   .#{$prefix}--pagination__left {
