--- a/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
+++ b/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
@@ -1,6 +1,6 @@
-@import '~carbon-components/scss/components/checkbox/checkbox';
-@import '~carbon-components/scss/components/multi-select/multi-select';
-@import '~carbon-components/scss/components/radio-button/radio-button';
+@import 'carbon-components/scss/components/checkbox/checkbox';
+@import 'carbon-components/scss/components/multi-select/multi-select';
+@import 'carbon-components/scss/components/radio-button/radio-button';
 
 .#{$prefix}--search-facets__button-clear-all {
   .#{$prefix}--btn__icon {
