feat: pull AddRuleGroupButton out into own component plus refactoring

--- a/packages/discovery-styles/scss/components/structured-query/_structured-query.scss
+++ b/packages/discovery-styles/scss/components/structured-query/_structured-query.scss
@@ -20,6 +20,10 @@
   }
 }
 
+.#{$prefix}--structured-query__rule-group--nested {
+  padding-left: 2rem;
+}
+
 .#{$prefix}--structured-query__rules {
   display: flex;
   padding: $spacing-md;
@@ -55,8 +59,4 @@
       margin-right: $spacing-xs;
     }
   }
-}
-
-.indent {
-  padding-left: 2rem;
 }
