test: add initial nested rulegroups tests

--- a/packages/discovery-styles/scss/components/structured-query/_structured-query.scss
+++ b/packages/discovery-styles/scss/components/structured-query/_structured-query.scss
@@ -21,7 +21,7 @@
 }
 
 .#{$prefix}--structured-query__rule-group--nested {
-  padding-left: 2rem;
+  padding-left: $spacing-xl;
 }
 
 .#{$prefix}--structured-query__rules {
