feat: structured query add and remove group rules (#42)
* feat: update to initially add in groups to data structure

* feat: get adding groups initially working

* feat: some refactoring and getting remove group/group rules working

* feat: refactor RemoveRuleRowButton out into its own component

* feat: break RuleGroup out into own component

* feat: pull AddRuleGroupButton out into own component plus refactoring

* test: add initial nested rulegroups tests

* feat: some refactorings

* feat: some cleanup and refactorings

* docs: updates for consistency

* test: add tests for adding/removing from multiple rule groups

* test: add test that only max num rule groups can be added

* feat: refactor tests and other cleanup

* test: improve test organization

* test: add another expect for removing rule test

* test: few more tweaks

* feat: update data structure for groups per PR feedback

* refactor: dont need to pass rows to RuleGroup

* refactor: improve naming and rowId not optional

* refactor: use max instead of last in arr for new rulerowid

* refactor: improve naming

* refactor: update with group_order and to address other PR feedback

Co-authored-by: Andrew Turgeon <andrew.p.turgeon@gmail.com>

--- a/packages/discovery-styles/scss/components/structured-query/_structured-query.scss
+++ b/packages/discovery-styles/scss/components/structured-query/_structured-query.scss
@@ -20,6 +20,10 @@
   }
 }
 
+.#{$prefix}--structured-query__rule-group--nested {
+  padding-left: $spacing-xl;
+}
+
 .#{$prefix}--structured-query__rules {
   display: flex;
   padding: $spacing-md;
