--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -17,6 +17,7 @@ $css--use-layer: true !default;
 @import 'components/document-preview/document-preview-toolbar';
 @import 'components/document-preview/document-preview-pdf-fallback';
 @import 'components/document-preview/document-preview-pdf-viewer';
+@import 'components/document-preview/document-preview-html';
 @import 'components/document-preview/simple-document';
 @import 'components/ci-document/ci-document-content';
 @import 'components/ci-document/ci-document-details';
