--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-html.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-html.scss
@@ -1,9 +1,18 @@
+@import '../../vars';
 @import './mixins';
 
 .#{$prefix}--html {
   max-width: 80ch;
   margin: 0 auto;
+  position: relative;
 
   @include htmlReset;
   @include htmlOverride;
+
+  .field--rect {
+    position: absolute;
+    background-color: $highlight;
+    // TODO why is z-index necessary?
+    z-index: -1;
+  }
 }
