--- a/examples/discovery-search-app/src/app.scss
+++ b/examples/discovery-search-app/src/app.scss
@@ -139,7 +139,7 @@ $nav-toolbar-height: 42px;
 
   .#{$prefix}--search-app__content {
     min-height: 0;
-    height: 100%;
+    height: 100vh;
     overflow-y: auto;
   }
 }
