feat: add tests for query display; add copy to clipboard

--- a/packages/discovery-styles/scss/components/structured-query/_structured-query.scss
+++ b/packages/discovery-styles/scss/components/structured-query/_structured-query.scss
@@ -2,6 +2,17 @@
 @import 'carbon-components/scss/components/combo-box/combo-box';
 @import 'carbon-components/scss/components/dropdown/dropdown';
 
+.#{$prefix}--structured-query {
+  .#{$prefix}--snippet {
+    align-items: center;
+    display: flex;
+
+    .#{$prefix}--snippet-container {
+      padding-right: $spacing-md;
+    }
+  }
+}
+
 .#{$prefix}--structured-query__rule-group-dropdown {
   align-items: center;
   display: flex;
