feat: structured query convert inputs (#83)
* feat: start adding field, operator, value plus selection change handlers

* feat: update removerulerow and rulegroupdropdown

* feat: add util for getting new id for groups and rows

* feat: move operator within groups

* refactor: combine rows

* feat: add in handleFieldDropdownChange

* feat: add run query button

* feat: add stringifyStructuredQuerySelection

* feat: add in some error handling/validation

* feat: move isValidSelection into util; write first test for stringify

* test: add more utils tests for structuredquery

* test: add isValidSelection util tests

* feat: update to display query on selection

* feat: add tests for query display; add copy to clipboard

* feat: add handling and tests for reserved characters

* test: add more tests for reserved characters in selections

* refactor: some renaming

* refactor: some renaming and reorganizing:

* refactor: improving types

* refactor: add comments; improve naming

* refactor: remove copy functionality

* refactor: updates based on PR feedback

* test: update tests to match changes

* refactor: escape double quotes in values

* refactor: make sure all double quotes replaced

--- a/packages/discovery-styles/scss/components/structured-query/_structured-query.scss
+++ b/packages/discovery-styles/scss/components/structured-query/_structured-query.scss
@@ -60,3 +60,16 @@
     }
   }
 }
+
+.#{$prefix}--structured-query__copyable-query {
+  align-items: center;
+  display: flex;
+
+  .#{$prefix}--snippet-container {
+    padding-right: $spacing-md;
+  }
+
+  button {
+    display: none;
+  }
+}
