--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-toolbar.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-toolbar.scss
@@ -1,5 +1,5 @@
-@import 'carbon-components/scss/components/button/button';
-@import 'carbon-components/scss/components/tooltip/tooltip';
+@import '~carbon-components/scss/components/button/button';
+@import '~carbon-components/scss/components/tooltip/tooltip';
 
 .#{$prefix}--preview-toolbar {
   flex: 0 0 auto;
