--- a/packages/discovery-styles/scss/components/document-preview/_document-preview.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview.scss
@@ -1,5 +1,5 @@
 @import '../../vars';
-@import 'carbon-components/scss/components/skeleton/skeleton';
+@import '~carbon-components/scss/components/skeleton/skeleton';
 
 .#{$prefix}--document-preview {
   position: relative;
