--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-details.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-details.scss
@@ -1,4 +1,4 @@
-@import 'carbon-components/scss/components/link/link';
+@import '~carbon-components/scss/components/link/link';
 
 .#{$prefix}--ci-doc-details {
   align-items: center;
