--- a/packages/discovery-styles/scss/components/search-input/_search-input.scss
+++ b/packages/discovery-styles/scss/components/search-input/_search-input.scss
@@ -1,6 +1,6 @@
 // Component styles
-@import 'carbon-components/scss/components/search/search';
-@import 'carbon-components/scss/components/list-box/list-box';
+@import '~carbon-components/scss/components/search/search';
+@import '~carbon-components/scss/components/list-box/list-box';
 
 .#{$prefix}--search-input--discovery {
   padding: 0;
